--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "lint": "eslint src/",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "serve": "http-server dist"
   },
   "husky": {
     "hooks": {
@@ -21,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "http-server": "^0.12.0",
     "lint-staged": "^9.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
